--- a/kube.yaml
+++ b/kube.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: node-site
-        image: node-kube
+        image: node-kube:v2
         imagePullPolicy: Never
 ---
 apiVersion: v1
